--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "typescript": "^4.7.3"
   },
   "dependencies": {
+    "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mongoose": "^6.3.8"
   }
 }
